# Burnout-Predictor

./: Burnout.py  README.md  app.py  burnout.pkl  main.py  pyproject.toml  requirements.txt  train.ipynb
